--- a/src/login.css
+++ b/src/login.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+
 *{
     margin: 0px;
     padding: 0px;
+    font-family: 'Inter', sans-serif;
+}
+
+#root{
+    width: 100vw;
+    height: 100vh;
 }
 
 .mainLogin{
@@ -15,6 +24,7 @@
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.59), rgba(189, 189, 189, 0.25)),url(assets/fondito.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 700px;
 }
 
 .mainLogin_container{
@@ -40,9 +50,53 @@
     gap: 20px;
     padding: 20px;
     box-sizing: border-box;
+    align-items: center;
 }
 
 .container_form div{
     display: flex;
     flex-flow: column;
+    gap: 5px;
+    width: 100%;
+}
+
+.form_button{
+    width: 80%;
+    background-color: #48ABF3;
+    border: 1px solid #48ABF3;
+    padding: 5px 0px;
+    border-radius: 5px;
+    color: white;
+}
+
+.form_button:hover{
+    cursor: pointer;
+}
+
+.container_form div input{
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    background-color: rgb(241, 241, 241);
+}
+
+.container_form input:focus{
+    border: 2px solid #48ABF3;
+}
+
+.container_form input:hover{
+    border: 2px solid #48acf35b;
+}
+
+.container_form input:focus-visible{
+    outline: none;
+    border: 2px solid #48ABF3;
+}
+
+.container_form input:hover{
+    cursor: pointer;
+}
+
+.container_form label{
+    font-size: 0.8em;
 }
