--- a/src/login.css
+++ b/src/login.css
@@ -100,3 +100,60 @@
 .container_form label{
     font-size: 0.8em;
 }
+
+.errorHandler{
+    position: absolute;
+    z-index: 2000;
+    background-color: rgb(0 0 0 / 54%);
+    width: 100vw;
+    height: 790px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.errorHandler_container{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 15px;
+    background-color: white;
+    width: 90%;
+    padding: 25px;
+    box-sizing: border-box;
+    gap: 25px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.container_warning{
+    border: 4px solid red; 
+    width: 50%; 
+    height: 70%; 
+    border-radius: 50%;
+}
+
+.container_close{
+    width: 10%; 
+    height: 10%; 
+    align-self: flex-end;
+}
+
+.close_img{
+    width: 100%; 
+    height: 100%;
+}
+
+.container_warning{
+    width: 100%; 
+    height: 100%;
+}
+
+.container_message{
+    font-size: 1.3em;
+}
