--- a/src/landingPage.css
+++ b/src/landingPage.css
@@ -128,6 +128,8 @@ a:hover{
     background-color: #3C3B3B;
     color: white;
     padding: 10px;
+    width: 100vw;
+    box-sizing: border-box;
     
 }
 
