--- a/src/login.css
+++ b/src/login.css
@@ -20,11 +20,13 @@
     justify-content: center;
     flex-flow: column;
     height: 85vh;
+    width: 100vw;
     /*background-image: url(assets/fondito.jpg);*/
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.59), rgba(189, 189, 189, 0.25)),url(assets/fondito.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 700px;
+    gap:25px;
 }
 
 .mainLogin_container{
@@ -150,10 +152,16 @@
 }
 
 .container_warning{
-    width: 100%; 
-    height: 100%;
+    width: 50%; 
+    height: 50%;
+    max-width: 120px;
+    max-height: 120px;
 }
 
 .container_message{
     font-size: 1.3em;
+}
+.warning_img{
+    width: 100%;
+    height: 100%;
 }
