--- a/src/Components/landingPage.css
+++ b/src/Components/landingPage.css
@@ -7,11 +7,11 @@
     font-family: 'Inter', sans-serif;
 }
 
+
 .header{
     position: fixed;
     width: 100%;
     height: 95px;
-    top: calc(50% - 95px/2 - width);
     z-index: 1000;
     background: #48ABF3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -20,8 +20,9 @@
     align-items: center;
 }
 
+
 .header_logo{
-    width: 120px;
+    width: 100px;
     height: 100%;
     margin: 0px 10px;
 }
@@ -57,7 +58,7 @@ a:hover{
 
 .main_hero{
     color: white;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.39), rgba(0, 0, 0, 0.25)), url(assets/portadaprincipal.jpg);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.39), rgba(0, 0, 0, 0.25)), url(../assets/portadaprincipal.jpg);
     width: 100%;
     height: 350px;
     display: flex;
