--- a/src/Components/shopHome.css
+++ b/src/Components/shopHome.css
@@ -70,3 +70,56 @@
     position: relative;
     top: 5rem;
 }
+
+table{
+    text-align: center;
+}
+
+td{
+    border: 1px solid black;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+th{
+    border: 1px solid black;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.shopingCartContainer{
+    z-index: 10000; 
+    position: fixed; 
+    background-color: rgb(0,0,0,0.25); 
+    height: 100%; 
+    width: 100%; 
+    display: flex; 
+    justify-content: center;
+}
+
+.shopingCartContainer_handler{
+    width: 80%; 
+    max-width: 550px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    flex-flow: column; 
+    background-color: white; 
+    justify-self: center; 
+    align-self: center; 
+    padding: 20px; 
+    box-sizing: border-box; 
+    border-radius: 15px; 
+    gap: 15px;
+}
+
+.handler_img{
+    width: 10%; 
+    height: 10%; 
+    align-self: flex-end;
+}
+
+.shopingCartContainer h1{
+    text-align: center;
+    font-size: 1.2em;
+}
