--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -22,7 +22,7 @@
     height: 85vh;
     width: 100vw;
     /*background-image: url(assets/fondito.jpg);*/
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.59), rgba(189, 189, 189, 0.25)),url(assets/fondito.jpg);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.59), rgba(189, 189, 189, 0.25)),url(../assets/fondito.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 700px;
